manifests/the-project/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-volume
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-app
          image: benpp/todo-app:2.2
          imagePullPolicy: Always
          volumeMounts:
            - name: todo-volume
              mountPath: /app/data
